--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,11 +1,13 @@
 <footer>
     <div class="f-info">
         <div class="f-info-socials">
-            <a href="https://x.com/AbhirupCode"><i class="fa-brands fa-square-x-twitter"></i></a>
-            <a href="https://www.instagram.com/abhirupzz/"><i class="fa-brands fa-square-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/abhirup-biswas-260167322/"><i class="fa-brands fa-square-linkedin"></i></a>
+            <i class="fa-brands fa-square-facebook"></i>
+            <a href="https://www.instagram.com/nikhil_._malviya?igsh=Y2QyeWRrZWg3ZWtv"> <i
+                    class="fa-brands fa-square-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/nikhil-malviya-b0b761278/"> <i
+                    class="fa-brands fa-square-linkedin"></i></a>
         </div>
-        <div class="f-info-brand"> &copy;Wanderlust Private Limited</div>
+        <div class="f-info-brand">&copy; Wanderlust Private Limited</div>
         <div class="f-info-links">
             <a href="/privacy">Privacy</a>
             <a href="/terms">Terms</a>
