--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,94 +1,55 @@
 <% layout("/layouts/boilerplate") %>
-<div class="row">
-    <div class="col-6 offset-3">
-        <h3 class="mt-3">Edit Listing</h3>
-        <form 
-            method="POST" 
-            action="/listings/<%= listing._id %>?_method=PUT" 
-            novalidate 
-            class="needs-validation"
-            enctype="multipart/form-data">
 
+<div class="row mt-3">
+<div class="col-8 offset-2">
+
+    <form method="POST" action="/listings/<%=listing._id%>?_method=PUT" novalidate class="needs-validation" enctype="multipart/form-data">
+            <h3>Edit your Listing</h3>
             <div class="mb-3">
                 <label for="title" class="form-label">Title</label>
-                <input 
-                    name="listing[title]" 
-                    value="<%= listing.title %>" 
-                    placeholder="Enter Title"
-                    type="text" 
-                    class="form-control" 
-                    required>
-                    <div class="valid-feedback">Title looks good!</div>
-                    <div class="invalid-feedback">Title is required</div>
+                <input type="text" value="<%=listing.title%>" name="listing[title]" class="form-control" required>
+                <div class="valid-feedback">Title looks good</div>
             </div>
 
             <div class="mb-3">
                 <label for="description" class="form-label">Description</label>
-                <textarea 
-                    name="listing[description]" 
-                    placeholder="Enter Description"
-                    class="form-control" 
-                    required><%= listing.description %></textarea>
-                    <div class="valid-feedback">Description looks good!</div>
-                    <div class="invalid-feedback">Add a short description</div>
+                <textarea type="text" name="listing[description]" class="form-control" required><%=listing.description%></textarea>
+                <div class="invalid-feedback">please enter a short description</div>
             </div>
 
-            <div class="mb-3">
-                Original Listing Image <br>
-                <img src="<%= originalImageUrl %>">
+             <div class="mb-3">
+                Orginal Listing Image
+                <br>
+                <img src="<%= originalImageUrl %>" alt="">
             </div>
 
             <div class="mb-3">
                 <label for="image" class="form-label">Upload New Image</label>
-                <input 
-                    name="listing[image]" 
-                    type="file" 
-                    class="form-control"
-                    >
+                <input type="file" name="listing[image]" class="form-control" >
             </div>
 
             <div class="row">
-                <div class="mb-3 col-md-5">
+                <div class="mb-3 col-md-4">
                     <label for="price" class="form-label">Price</label>
-                    <input 
-                        name="listing[price]" 
-                        value="<%= listing.price %>" 
-                        placeholder="Enter Price"
-                        type="number" 
-                        class="form-control" 
-                        required>
-                        <div class="valid-feedback">Price looks good!</div>
-                        <div class="invalid-feedback">Please enter a valid price</div>
+                    <input type="number" value="<%=listing.price%>" name="listing[price]" class="form-control" required>
+                    <div class="invalid-feedback">Price should be valid</div>
                 </div>
-                <div class="mb-3 col-md-7">
+                
+                <div class="mb-3 col-md-8">
                     <label for="country" class="form-label">Country</label>
-                    <input 
-                        name="listing[country]" 
-                        value="<%= listing.country %>" 
-                        placeholder="Enter Country"
-                        type="text" 
-                        class="form-control" 
-                        required>
-                        <div class="valid-feedback">Country looks good!</div>
-                        <div class="invalid-feedback">Please enter a valid country</div>
+                    <input type="text" value="<%=listing.country%>" name="listing[country]" class="form-control"required>
+                    <div class="invalid-feedback">Country name should be valid</div>
                 </div>
             </div>
-
+            
             <div class="mb-3">
                 <label for="location" class="form-label">Location</label>
-                <input 
-                    name="listing[location]" 
-                    value="<%= listing.location %>" 
-                    placeholder="Enter Location"
-                    type="text" 
-                    class="form-control" 
-                    required>
-                    <div class="valid-feedback">Location looks good!</div>
-                    <div class="invalid-feedback">Please enter a valid location</div>
+                <input type="text" value="<%=listing.location%>" name="listing[location]" class="form-control"required>
+                <div class="invalid-feedback">Location should be valid</div>
             </div>
-
-            <br><br>
-            <button type="submit" class="btn btn-dark edit-btn">Update Listing</button>
+           
+            <button class="btn btn-dark edit-btn mt-3">Edit</button>
         </form>
-    </div>
+        <br>
+</div>
 </div>
