--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,46 +1,48 @@
 <% layout("/layouts/boilerplate") %>
     <style>
         #filters {
-            margin-top: 1rem;
             display: flex;
             flex-wrap: wrap;
             align-items: center;
         }
 
         .filter {
-            text-align: center;
             margin-right: 2rem;
-            margin-top: 2rem;
+            text-align: center;
+            margin-top: 1rem;
             opacity: 0.7;
         }
 
         .filter:hover {
-            transition: 400ms;
             opacity: 1;
             cursor: pointer;
         }
 
         .filter p {
-            font-size: 0.9rem;
+            font-size: 0.7rem;
         }
 
         .tax-info {
             display: none;
+            opacity: 0.9;
+            font-size: 0.8rem;
         }
 
-        .tax-toggle {
+        .tax-toogle{
             border: 1px solid black;
             border-radius: 1rem;
             height: 3rem;
-            padding: 1.5rem;
-            margin-left: 0.6rem;
+            padding: 1rem;
+            margin-left: 5rem;
             display: flex;
             align-items: center;
         }
     </style>
+
+
     <div id="filters">
         <div class="filter">
-            <div><i class="fa-solid fa-fire-flame-curved"></i></div>
+            <div><i class="fa-solid fa-fire"></i></div>
             <p>Trending</p>
         </div>
         <div class="filter">
@@ -49,85 +51,77 @@
         </div>
         <div class="filter">
             <div><i class="fa-solid fa-mountain-city"></i></div>
-            <p>Iconic Cities</p>
+            <p>Iconic cities</p>
         </div>
         <div class="filter">
             <div><i class="fa-solid fa-mountain"></i></div>
-            <p>Mountains</p>
+            <p>Moutains</p>
         </div>
         <div class="filter">
-            <div><i class="fa-solid fa-chess-rook"></i></div>
+            <div><i class="fa-brands fa-fort-awesome"></i></div>
             <p>Castles</p>
         </div>
         <div class="filter">
-            <div><i class="fa-solid fa-person-swimming"></i></div>
-            <p>Amazing Pools</p>
+            <div><i class="fa-solid fa-campground"></i></div>
+            <p>Camping</p>
         </div>
         <div class="filter">
-            <div><i class="fa-solid fa-chess-rook"></i></div>
-            <p>Castles</p>
-        </div>
-        <div class="filter">
-            <div><i class="fa-solid fa-tractor"></i></div>
+            <div><i class="fa-solid fa-cow"></i></div>
             <p>Farms</p>
         </div>
         <div class="filter">
-            <div><i class="fa-solid fa-tents"></i></div>
-            <p>Camps</p>
-        </div>
-        <div class="filter">
-            <div><i class="fa-solid fa-snowflake"></i></div>
+            <div><i class="fa-solid fa-person-swimming"></i></div>
             <p>Arctic</p>
         </div>
-        <!-- <div class="filter">
-            <div><i class="fa-solid fa-landmark-dome"></i></div>
-            <p>Dome</p>
-        </div> -->
         <div class="filter">
+            <div><i class="fa-solid fa-igloo"></i></div>
+            <p>Domes</p>
+        </div>
+         <div class="filter">
+            <div><i class="fa-solid fa-person-swimming"></i></div>
+            <p>Amazing pools</p>
+        </div>
+        <!-- <div class="filter">
             <div><i class="fa-solid fa-ship"></i></div>
             <p>Boats</p>
-        </div>
-        <div class="tax-toggle">
+        </div> -->
+
+        <div class="tax-toogle">
             <div class="form-check-reverse form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
-                <label class="form-check-label" for="switchCheckDefault">Display total after taxes</label>
+                <label class="form-check-label" for="switchCheckDefault" style=" cursor: pointer;">Display total after taxes</label>
             </div>
         </div>
     </div>
-    <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1 mt-3">
-        <% for(let listing of allListings){ %>
-            <a href="/listings/<%= listing._id %>" class="listing-link">
+    <div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-1 mt-3">
+        <% for(listing of allListings){ %>
+            <a href="/listings/<%-listing._id %>" class="listing-link">
                 <div class="card col listing-card">
-                    <img src=<%=listing.image.url %> class="card-img-top"
-                    alt="listing_image"
-                    style="height: 20rem">
-                    <div class="card-img-overlay">
-
-                    </div>
+                    <img src="<%=listing.image.url %>" class="card-img-top" alt="listing_image" style="height: 15rem;">
+                    <div class="card-img-overlay"></div>
                     <div class="card-body">
-                        <p class="card-text">
+                        <p class="card-text">  
                             <b>
-                                <%= listing.title %>
-                            </b> <br>
-                            &#x20B9; <%= listing.price.toLocaleString("en-IN") %>/night
-                                <i class="tax-info">&nbsp;&nbsp;+18% GST</i>
+                                <%=listing.title %><br>
+                            </b>
+                            &#8377;<%= listing.price.toLocaleString("en-IN")%> / night
+                                <i class="tax-info">&nbsp;+18% GST</i>
                         </p>
                     </div>
                 </div>
             </a>
             <% } %>
     </div>
-
     <script>
         let taxSwitch = document.getElementById("switchCheckDefault");
-        taxSwitch.addEventListener('click', () => {
+        taxSwitch.addEventListener("click", () => {
             let taxInfo = document.getElementsByClassName("tax-info");
             for (info of taxInfo) {
-                if (info.style.display != 'inline') {
+                if (info.style.display != "inline") {
                     info.style.display = "inline";
                 } else {
                     info.style.display = "none";
                 }
             }
-        })
+        });
     </script>
