--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,81 +1,51 @@
 <% layout("/layouts/boilerplate") %>
-<div class="row">
-    <div class="col-6 offset-3">
-        <h3 class="mt-3">Create a New Listing</h3>
-        <form action="/listings" method="POST" novalidate class="needs-validation" enctype="multipart/form-data">
 
-            <div class="mb-3">
-                <label for="title" class="form-label">Title</label>
-                <input 
-                    name="listing[title]" 
-                    placeholder="Enter Title" 
-                    type="text" 
-                    class="form-control" 
-                    required>
-                    <div class="valid-feedback">Title looks good!</div>
-                    <div class="invalid-feedback">Title is required</div>
-            </div>
-
-            <div class="mb-3">
-                <label for="description" class="form-label">Description</label>
-                <textarea 
-                    name="listing[description]" 
-                    placeholder="Enter Description"
-                    class="form-control" 
-                    required></textarea>
-                    <div class="valid-feedback">Description looks good!</div>
-                    <div class="invalid-feedback">Add a short description</div>
-            </div>
-
-            <div class="mb-3">
-                <label for="image" class="form-label">Upload Listing Image</label>
-                <input 
-                    name="listing[image]"  
-                    type="file" 
-                    class="form-control"
-                    required>
-            </div>
-
-            <div class="row">
-                <div class="mb-3 col-md-5">
-                    <label for="price" class="form-label">Price</label>
-                    <input 
-                        name="listing[price]" 
-                        placeholder="Enter Price" 
-                        type="text" 
-                        class="form-control"
-                        required>
-                        <div class="valid-feedback">Price looks good!</div>
-                        <div class="invalid-feedback">Please enter a valid price</div>
-                </div>
-                <div class="mb-3 col-md-7">
-                    <label for="country" class="form-label">Country</label>
-                    <input 
-                        name="listing[country]" 
-                        placeholder="Enter Country" 
-                        type="text" 
-                        class="form-control" 
-                        required>
-                        <div class="valid-feedback">Country looks good!</div>
-                        <div class="invalid-feedback">Please enter a valid country</div>
-                </div>
-            </div>
-
-            <div class="mb-3">
-                <label for="location" class="form-label">Location</label>
-                <input 
-                    name="listing[location]" 
-                    placeholder="Enter Location" 
-                    type="text" 
-                    class="form-control" 
-                    required>
-                    <div class="valid-feedback">Location looks good!</div>
-                    <div class="invalid-feedback">Please enter a valid location</div>
-            </div>
-
+    <div class="row mt-3">
+        <div class="col-8 offset-2">
             <br><br>
-            <button type="submit" class="btn btn-dark add-btn">Add Listing</button>
-            <br>
-        </form>
+            <h3>Create a New Listing</h3>
+            <form action="/listings" method="POST" novalidate  class="needs-validation" enctype="multipart/form-data">
+
+                <div class="mb-3">
+                    <label for="title" class="form-label">Title</label>
+                    <input type="text" placeholder="Add a catchy title" name="listing[title]" class="form-control" required>
+                    <div class="valid-feedback">Title looks good</div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="description" class="form-label">Description</label>
+                    <textarea name="listing[description]" class="form-control" required></textarea>
+                    <div class="invalid-feedback">please enter a short description</div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="image" class="form-label">Upload Image</label>
+                    <input type="file" name="listing[image]" class="form-control" required>
+                </div>
+
+                <div class="row">
+                    <div class="mb-3 col-md-4">
+                        <label for="price" class="form-label">Price</label>
+                        <input type="number" placeholder="1200" name="listing[price]" class="form-control" required>
+                        <div class="invalid-feedback">Price should be valid</div>
+                    </div>
+
+                    <div class="mb-3 col-md-8">
+                        <label for="country" class="form-label">Country</label>
+                        <input type="text" placeholder="India" name="listing[country]" class="form-control" required>
+                        <div class="invalid-feedback">Country name should be valid</div>
+                    </div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="location" class="form-label">Location</label>
+                    <input type="text" placeholder="jaipur" name="listing[location]" class="form-control" required>
+                    <div class="invalid-feedback">Location should be valid</div>
+                </div>
+
+                <button class="btn btn-dark add-btn mt-3">Add</button>
+                <br><br>
+                
+            </form>
     </div>
-</div>
+    </div>
