--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -41,7 +41,7 @@
       </div>
       
       <div class="navbar-nav ms-auto">
-        <a class="nav-link" href="/listings/new">Wanderlust your home</a>
+        <a class="nav-link" href="/listings/new">Wandero your home</a>
         <% if(!currUser) { %>
           <a class="nav-link active" href="/signup"><b>Sign up</b></a>
           <a class="nav-link" href="/login"><b>Log in</b></a>
