--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate") %>
   <script>
     const mapToken = "<%= process.env.MAP_TOKEN %>"
-    const listing = <%- JSON.stringify(listing) %>
+    const listing = <%- JSON.stringify(listing) %>;
   </script>
 
   <div class="row mt-3">
@@ -97,8 +97,7 @@
                         </p>
                         <form class="mb-3" method="POST"
                           action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE">
-                          <!-- <button class="btn btn-sm btn-outline-dark"><i class="fa-solid fa-trash-can"></i></button> -->
-                          <button class="btn btn-sm btn-outline-dark">Delete</button>
+                          <button class="btn btn-sm btn-dark">Delete</button>
                         </form>
                       </div>
                     </div>
