--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -105,10 +105,10 @@
                 </div>
                 <% } %>
         </div>
-        <div class="col-6 offset-3 mb-3">
-          <h3>Where you'll be</h3>
-          <div id="map"></div>
-        </div>
+       // <div class="col-6 offset-3 mb-3">
+        //  <h3>Where you'll be</h3>
+        //  <div id="map"></div>
+        //</div>
   </div>
   <br>
 
