--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -97,11 +97,7 @@
                         </p>
                         <form class="mb-3" method="POST"
                           action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE">
-<<<<<<< HEAD
                           <button class="btn btn-sm btn-outline-dark">Delete</button>
-=======
-                          <button class="btn btn-sm btn-dark">Delete</button>
->>>>>>> e4f3b2b0b5fc91890de581742a849ce02b7ea0b8
                         </form>
                       </div>
                     </div>
@@ -109,10 +105,10 @@
                 </div>
                 <% } %>
         </div>
-        <div class="col-6 offset-3 mb-3">
+        <!-- <div class="col-6 offset-3 mb-3">
           <h3>Where you'll be</h3>
           <div id="map"></div>
-        </div>
+        </div> -->
   </div>
   <br>
 
