--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -15,22 +15,26 @@
     <div class="card listing-card col-6 offset-3 show-card">
       <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
 
-      <div class="card-body">
-        <p class="card-text">Owned by<i>
+     <div class="card-body">
+        <p class="card-text"><b>Host :</b>
+          <span class="special" title="owner">
             <%= listing.owner.username %>
-          </i></p>
-        <p class="card-text">
-          <%= listing.description%>
+          </span>
         </p>
-        <p class="card-text">&#8377;<%= listing.price.toLocaleString("en-IN")%>
-        </p>
-        <p class="card-text">
-          <%= listing.location%>
-        </p>
-        <p class="card-text">
-          <%= listing.country%>
-        </p>
+        <div></div>
       </div>
+      <p class="card-text"><b>Description : </b>
+        <%= listing.description%>
+      </p>
+      <p class="card-text"><b>Price : </b>&#8377;<%= listing.price.toLocaleString("en-IN")%>
+      </p>
+      <p class="card-text"><b>Location : </b>
+        <%= listing.location%>
+      </p>
+      <p class="card-text"><b>Country : </b>
+        <%= listing.country%>
+      </p>
+    </div>
 
     </div>
 
@@ -88,7 +92,9 @@
                   <% for(review of listing.reviews) { %>
                     <div class="card col-5 mb-3 ms-3">
                       <div class="card-body">
-                        <p class="card-title">@<%= review.author.username %>
+                        <p class="card-title"><span class="special"><i class="fa-solid fa-circle-user"></i>
+                          <%= review.author.username %>
+                        </span>
                         </p>
                         <p class="starability-result" data-rating="<%=review.rating%>">
                         </p>
@@ -97,7 +103,7 @@
                         </p>
                         <form class="mb-3" method="POST"
                           action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE">
-                          <button class="btn btn-sm btn-outline-dark">Delete</button>
+                          <button class="btn btn-sm btn-outline-dark"><i class="fa-solid fa-trash-can"></i></button>
                         </form>
                       </div>
                     </div>
